# elaine-cli

./: .gitignore  Cargo.toml  README.md
src/: bibtex.rs  main.rs  project.rs  project_store.rs  reference.rs  reference_store.rs  state.rs
src/commands/: add.rs  attach.rs  detach.rs  edit.rs  init.rs  mod.rs  open.rs  pin.rs  printed.rs  pro.rs  purge.rs  rm.rs  search.rs  status.rs  unpin.rs
src/search/: engine.rs
src/search/strategies/: doi.rs  google_scholar.rs  mod.rs  url.rs  web.rs
src/utils/: id.rs  mod.rs  resolve.rs  resolve_project.rs
