[package]
name = "elaine-cli"
version = "0.5.0"
edition = "2024"
authors = ["Andrew Garcia"]
description = "An opinionated, local-first CLI reference manager for BibTeX and LaTeX users."
license = "MIT"
repository = "https://github.com/andrewrgarcia/elaine-cli"
homepage = "https://github.com/andrewrgarcia/elaine-cli"
readme = "README.md"
keywords = ["bibtex", "latex", "reference-manager", "cli", "research"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "eln"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"
serde_yaml = "0.9"
colored = "2.1"
regex = "1.10"

